--- a/src/pages/Landing/Landing.scss
+++ b/src/pages/Landing/Landing.scss
@@ -1,5 +1,8 @@
 $highlight-color: #00a0df;
-
+.logo {
+  padding: 10px;
+  height:  100px;
+}
 .landing {
   height: 100vh;
   background-color: rgb(37, 41, 46);
